add txt test file

--- a/Laba3HashTable/Laba3HashTable.csproj
+++ b/Laba3HashTable/Laba3HashTable.csproj
@@ -8,6 +8,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="WarAndWorld.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="WarAndWorld.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\MyHashTable\MyHashTable.csproj" />
   </ItemGroup>
 
